--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <!-- UPCOMING EVENTS -->
     <section id="events" class="upcoming-events">
         <h2>Upcoming Events</h2>
+        <div class="carousel-wrapper">
+        <button class="carousel-btn prev">&#10094;</button>
         <div class="carousel-container">
             <div class="event-card">
                 <h3>Monthly Townhall</h3>
@@ -89,8 +91,42 @@
                 <p>Date: Mar 15, 2025</p>
                 <p>Build amazing projects and win prizes!</p>
             </div>
+            <div class="event-card">
+                <h3>Wellness Day</h3>
+                <p>Date: Apr 20, 2025</p>
+                <p>Focus on health and well-being activities.</p>
+            </div>
+            <div class="event-card">
+                <h3>Team Building Event</h3>
+                <p>Date: May 5, 2025</p>
+                <p>Connect with like-minded individuals.</p>
+            </div>
+            <div class="event-card">
+                <h3>Product Launch</h3>
+                <p>Date: Jun 10, 2025</p>
+                <p>Celebrate our latest innovation!</p>
+            </div>
+            <div class="event-card">
+                <h3>Monthly Townhall</h3>
+                <p>Date: Jan 30, 2025</p>
+                <p>Join us for updates and team Q&A.</p>
+            </div>
+            <div class="event-card">
+                <h3>Design Thinking Workshop</h3>
+                <p>Date: Feb 10, 2025</p>
+                <p>Learn how to innovate collaboratively.</p>
+            </div>
         </div>
+        <button class="carousel-btn next">&#10095;</button>
+    </div>
+    <div class="carousel-indicators"></div>
+
+
+
+
+
     </section>
+    
 
     <!-- QUICK LINKS -->
     <section id="resources" class="quick-links">
